--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -15,6 +15,11 @@ body {
   font-family: Impact, sans-serif;
 }
 
+.travel-logo {
+  font-weight: 800;
+  letter-spacing: 0.5rem;
+}
+
 .navbar {
   position: fixed;
   top: 0;
@@ -38,8 +43,6 @@ body {
 .navbar__logo {
   z-index: 3;
   font-size: 1.5rem;
-  font-weight: 800;
-  letter-spacing: 0.25rem;
   cursor: pointer;
 }
 
@@ -137,6 +140,54 @@ body {
 .navbar__mobilehbg-line-X:nth-child(3) {
   -webkit-transform: translateY(-10px) rotate(-45deg);
           transform: translateY(-10px) rotate(-45deg);
+}
+
+.hero {
+  height: 100vh;
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-image: url(../img/hero-bg.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.hero > h1 {
+  opacity: 50%;
+  color: white;
+  font-size: 5rem;
+}
+
+.hero-btn {
+  opacity: 50%;
+  background: none;
+  margin-left: 2em;
+  margin-right: 2em;
+  padding: 0.5em;
+  color: white;
+  border: 2px white solid;
+  font-size: 3rem;
+  font-weight: 700;
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.hero-btn:hover {
+  opacity: 100%;
 }
 
 @media screen and (max-width: 768px) {
