--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,11 @@ body {
     font-family: Impact, sans-serif;
 }
 
+.travel-logo {
+    font-weight: 800;
+    letter-spacing: 0.5rem;
+}
+
 .navbar {
     position: fixed;
     top: 0;
@@ -29,8 +34,6 @@ body {
     &__logo {
         z-index: 3;
         font-size: 1.5rem;
-        font-weight: 800;
-        letter-spacing: 0.25rem;
         cursor: pointer;
     }
 
@@ -71,6 +74,7 @@ body {
         transform: translateY(-400px);
 
         transition: all 0.4s ease-in;
+
         &-active {
             transform: translateY(0px);
         }
@@ -115,6 +119,45 @@ body {
     }
 }
 
+.hero {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url(../img/hero-bg.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
+    &>h1 {
+        opacity: 50%;
+        color: white;
+        font-size: 5rem;
+    }
+
+    &-btn {
+        opacity: 50%;
+        background: none;
+        margin-left: 2em;
+        margin-right: 2em;
+        padding: 0.5em;
+        color: white;
+        border: 2px white solid;
+        font-size: 3rem;
+        font-weight: 700;
+        cursor: pointer;
+
+        transition: all 0.3s ease-in-out;
+
+        &:hover {
+            opacity: 100%;
+        }
+    }
+}
+
 @media screen and (max-width: 768px) {
     .navbar__menu {
         display: none;
@@ -125,7 +168,7 @@ body {
     .navbar__mobile {
         display: none;
     }
-    
+
     .navbar__mobilehbg {
         display: none;
     }
