--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -12,7 +12,7 @@ a {
 
 body {
   background-color: white;
-  font-family: Impact, sans-serif;
+  font-family: Georgia, serif;
 }
 
 .travel-logo {
@@ -24,8 +24,9 @@ body {
   position: fixed;
   top: 0;
   height: 60px;
-  width: 100vw;
-  padding: 0 2em;
+  width: 100%;
+  z-index: 2;
+  padding: 0 1em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -35,32 +36,60 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: black;
-  -webkit-box-shadow: 0px 5px 5px 5px black;
-          box-shadow: 0px 5px 5px 5px black;
+  background: black;
+  background: linear-gradient(140deg, black 0%, #00035c 30%, #0007c2 70%, black 100%);
+  border-bottom: 2px solid black;
 }
 
 .navbar__logo {
   z-index: 3;
+  padding-left: 0.1em;
+  border-bottom: 2px solid transparent;
+  color: whitesmoke;
   font-size: 1.5rem;
   cursor: pointer;
+  -webkit-transition: all 0.1s ease-in;
+  transition: all 0.1s ease-in;
+}
+
+.navbar__logo:hover {
+  border-bottom: 2px solid white;
+  color: white;
 }
 
 .navbar-item {
+  margin: 0 0.25em;
   padding: 0 0.5em;
+  border-bottom: 2px solid transparent;
+  color: whitesmoke;
   letter-spacing: 0.1rem;
   cursor: pointer;
+  -webkit-transition: all 0.1s ease-in;
+  transition: all 0.1s ease-in;
+}
+
+.navbar-item:hover {
+  border-bottom: 2px solid white;
+  color: white;
 }
 
 .navbar-btn {
   margin-left: 2em;
   margin-right: 2em;
   padding: 0.5em;
-  background-color: black;
-  color: white;
-  border: 2px white solid;
+  background-color: #00035c;
+  color: whitesmoke;
+  border: 2px #0007c2 solid;
   font-weight: 700;
   cursor: pointer;
+  -webkit-transition: all 0.1s ease-in;
+  transition: all 0.1s ease-in;
+}
+
+.navbar-btn:hover {
+  background-color: #0007c2;
+  border: solid 2px white;
+  color: white;
 }
 
 .navbar__menu {
@@ -77,7 +106,7 @@ body {
   top: 0;
   left: 0;
   z-index: 2;
-  width: 100vw;
+  width: 100%;
   padding-top: 60px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -89,9 +118,9 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: black;
-  -webkit-box-shadow: 0px 5px 5px 5px black;
-          box-shadow: 0px 5px 5px 5px black;
+  background: black;
+  background: linear-gradient(140deg, black 0%, #00035c 30%, #0007c2 70%, black 100%);
+  border-bottom: 2px solid black;
   -webkit-transform: translateY(-400px);
           transform: translateY(-400px);
   -webkit-transition: all 0.4s ease-in;
@@ -143,8 +172,10 @@ body {
 }
 
 .hero {
+  position: relative;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
+  z-index: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -166,13 +197,13 @@ body {
 }
 
 .hero > h1 {
-  opacity: 50%;
+  opacity: 70%;
   color: white;
   font-size: 5rem;
 }
 
 .hero-btn {
-  opacity: 50%;
+  opacity: 70%;
   background: none;
   margin-left: 2em;
   margin-right: 2em;
@@ -190,9 +221,66 @@ body {
   opacity: 100%;
 }
 
+.destinations {
+  height: 100vh;
+  width: 100%;
+  background-color: #00035c;
+  border-top: 2px solid black;
+  color: white;
+}
+
+.services {
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  z-index: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-image: url(../img/services-bg.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  border-top: 2px solid black;
+}
+
+.footer {
+  height: 30vh;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: black;
+  background: linear-gradient(140deg, black 0%, #00035c 30%, #0007c2 70%, black 100%);
+  border-top: 2px solid black;
+  color: white;
+}
+
 @media screen and (max-width: 768px) {
   .navbar__menu {
     display: none;
+  }
+  .navbar-btn {
+    margin-bottom: 1em;
   }
 }
 
