--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,7 +11,7 @@ a {
 
 body {
     background-color: white;
-    font-family: Impact, sans-serif;
+    font-family:Georgia, serif;
 }
 
 .travel-logo {
@@ -23,35 +23,62 @@ body {
     position: fixed;
     top: 0;
     height: 60px;
-    width: 100vw;
-    padding: 0 2em;
+    width: 100%;
+    z-index: 2;
+    padding: 0 1em;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: black;
-    box-shadow: 0px 5px 5px 5px black;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(140deg, rgba(0, 0, 0, 1) 0%, rgba(0, 3, 92, 1) 30%, rgba(0, 7, 194, 1) 70%, rgba(0, 0, 0, 1) 100%);
+    border-bottom: 2px solid black;
 
     &__logo {
         z-index: 3;
+        padding-left: 0.1em;
+        border-bottom: 2px solid transparent;
+        color: whitesmoke;
         font-size: 1.5rem;
         cursor: pointer;
+
+        transition: all 0.1s ease-in;
+        &:hover {
+            border-bottom: 2px solid white;
+            color: white;
+        }
     }
 
     &-item {
+        margin: 0 0.25em;
         padding: 0 0.5em;
+        border-bottom: 2px solid transparent;
+        color: whitesmoke;
         letter-spacing: 0.1rem;
         cursor: pointer;
+
+        transition: all 0.1s ease-in;
+        &:hover {
+            border-bottom: 2px solid white;
+            color: white;
+        }
     }
 
     &-btn {
         margin-left: 2em;
         margin-right: 2em;
         padding: 0.5em;
-        background-color: black;
-        color: white;
-        border: 2px white solid;
+        background-color: rgba(0, 3, 92, 1);
+        color: whitesmoke;
+        border: 2px rgba(0, 7, 194, 1) solid;
         font-weight: 700;
         cursor: pointer;
+
+        transition: all 0.1s ease-in;
+        &:hover {
+            background-color: rgba(0, 7, 194, 1);
+            border: solid 2px white;
+            color: white;
+        }
     }
 
     &__menu {
@@ -64,13 +91,14 @@ body {
         top: 0;
         left: 0;
         z-index: 2;
-        width: 100vw;
+        width: 100%;
         padding-top: 60px;
         display: flex;
         flex-direction: column;
         align-items: center;
-        background-color: black;
-        box-shadow: 0px 5px 5px 5px black;
+        background: rgb(0, 0, 0);
+        background: linear-gradient(140deg, rgba(0, 0, 0, 1) 0%, rgba(0, 3, 92, 1) 30%, rgba(0, 7, 194, 1) 70%, rgba(0, 0, 0, 1) 100%);
+        border-bottom: 2px solid black;
         transform: translateY(-400px);
 
         transition: all 0.4s ease-in;
@@ -120,8 +148,10 @@ body {
 }
 
 .hero {
+    position: relative;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
+    z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -133,13 +163,13 @@ body {
     background-attachment: fixed;
 
     &>h1 {
-        opacity: 50%;
+        opacity: 70%;
         color: white;
         font-size: 5rem;
     }
 
     &-btn {
-        opacity: 50%;
+        opacity: 70%;
         background: none;
         margin-left: 2em;
         margin-right: 2em;
@@ -158,9 +188,53 @@ body {
     }
 }
 
+.destinations {
+    height: 100vh;
+    width: 100%;
+    background-color: rgba(0, 3, 92, 1);
+    border-top: 2px solid black;
+    color: white;
+}
+
+.services {
+    height: 100vh;
+    width: 100%;
+
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url(../img/services-bg.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    border-top: 2px solid black;
+}
+
+.footer {
+    height: 30vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(140deg, rgba(0, 0, 0, 1) 0%, rgba(0, 3, 92, 1) 30%, rgba(0, 7, 194, 1) 70%, rgba(0, 0, 0, 1) 100%);
+    border-top: 2px solid black;
+    color: white;
+}
+
 @media screen and (max-width: 768px) {
     .navbar__menu {
         display: none;
+    }
+
+    .navbar-btn {
+        margin-bottom: 1em;
     }
 }
 
