--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -208,6 +208,7 @@ body {
   margin-left: 2em;
   margin-right: 2em;
   padding: 0.5em;
+  background-color: transparent;
   color: white;
   border: 2px white solid;
   font-size: 3rem;
@@ -218,15 +219,66 @@ body {
 }
 
 .hero-btn:hover {
+  background-color: #00035c;
   opacity: 100%;
 }
 
 .destinations {
   height: 100vh;
   width: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #00035c;
   border-top: 2px solid black;
   color: white;
+}
+
+.card {
+  height: 200px;
+  width: 200px;
+  margin: 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: whitesmoke;
+  -webkit-box-shadow: 0 0 5px 2px white;
+          box-shadow: 0 0 5px 2px white;
+  -webkit-transition: all 0.1s ease-in;
+  transition: all 0.1s ease-in;
+}
+
+.card__image {
+  height: 150px;
+  width: 100%;
+}
+
+.card__info {
+  margin: 0.5em 0;
+  color: #0007c2;
+}
+
+.card__info > h4 {
+  color: #00035c;
+}
+
+.card:hover {
+  -webkit-box-shadow: 0 0 5px 5px white;
+          box-shadow: 0 0 5px 5px white;
 }
 
 .services {
