--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -174,6 +174,7 @@ body {
         margin-left: 2em;
         margin-right: 2em;
         padding: 0.5em;
+        background-color: transparent;
         color: white;
         border: 2px white solid;
         font-size: 3rem;
@@ -183,6 +184,7 @@ body {
         transition: all 0.3s ease-in-out;
 
         &:hover {
+            background-color: rgba(0, 3, 92, 1);
             opacity: 100%;
         }
     }
@@ -191,9 +193,44 @@ body {
 .destinations {
     height: 100vh;
     width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: center;
+    align-items: center;
     background-color: rgba(0, 3, 92, 1);
     border-top: 2px solid black;
     color: white;
+}
+
+.card {
+    height: 200px;
+    width: 200px;
+    margin: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: whitesmoke;
+    box-shadow: 0 0 5px 2px white;
+
+    &__image {
+        height: 150px;
+        width: 100%;
+    }
+
+    &__info {
+        margin: 0.5em 0;
+        color: rgba(0, 7, 194, 1);
+
+        & > h4 {
+            color: rgba(0, 3, 92, 1);
+        }
+    }
+
+    transition: all 0.1s ease-in;
+
+    &:hover {
+        box-shadow: 0 0 5px 5px white;
+    }
 }
 
 .services {
