--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -193,36 +193,48 @@ body {
 .destinations {
     height: 100vh;
     width: 100%;
+    padding: 1em 3em;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-content: center;
-    align-items: center;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 3em;
     background-color: rgba(0, 3, 92, 1);
     border-top: 2px solid black;
     color: white;
 }
 
 .card {
-    height: 200px;
-    width: 200px;
+    max-height: 400px;
+    width: 100%;
     margin: 1em;
     display: flex;
     flex-direction: column;
+    justify-self: center;
     align-items: center;
     background-color: whitesmoke;
     box-shadow: 0 0 5px 2px white;
 
     &__image {
-        height: 150px;
+        height: 60%;
         width: 100%;
+        object-fit: cover;
+        border: 2px whitesmoke solid;
     }
 
     &__info {
         margin: 0.5em 0;
+        display: flex;
+        flex-direction: column;
         color: rgba(0, 7, 194, 1);
 
-        & > h4 {
+        & > h2 {
+            align-self: center;
             color: rgba(0, 3, 92, 1);
+        }
+
+        & > p {
+            padding: 0.5em;
+            text-align: justify;
+            text-justify: inter-word;
         }
     }
 
